--- a/.github/workflows/deplo.yml
+++ b/.github/workflows/deplo.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: "18"
 
       - name: Install dependencies
-        run: npm ci
+        run: yarn install
 
       - name: Deploy
         run: |
